# desk-buddy

./: .gitignore  CLAUDE.md  README.md  desk_buddy.spec  launch.py  pyproject.toml
docs/superpowers/plans/: 2026-06-03-desk-buddy-cc-confirm-alert.md  2026-06-08-chat-translate.md
docs/superpowers/specs/: 2026-06-03-desk-buddy-async-llm-design.md  2026-06-03-desk-buddy-cc-confirm-alert-design.md  2026-06-03-desk-buddy-design.md  2026-06-03-desk-buddy-frog-gif-design.md  2026-06-03-desk-buddy-lazy-config-design.md  2026-06-03-desk-buddy-persistent-reminder-alert-design.md  2026-06-03-desk-buddy-pixel-fox-design.md  2026-06-05-cc-session-name-design.md  2026-06-05-versioning-design.md  2026-06-08-chat-translate-design.md
src/desk_buddy/: __init__.py  app.py  brain.py  cc_signals.py  config.py  install_hooks.py  main.py  models.py  notify.py  pet_widget.py  qt_runner.py  scheduler.py  sprite.py  store.py
src/desk_buddy/hooks/: clear.py  notify.py
src/desk_buddy/llm/: __init__.py  base.py  openai_compat.py
tests/: conftest.py  test_app.py  test_brain.py  test_cc_hooks.py  test_cc_signals.py  test_config.py  test_install_hooks.py  test_llm_base.py  test_llm_factory.py  test_main.py  test_models.py  test_notify.py  test_openai_compat.py  test_pet_alert.py  test_pet_widget.py  test_qt_runner.py  test_scheduler.py  test_sprite.py  test_store.py  test_version.py
