[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "desk-buddy"
version = "0.1.0"
description = "Windows desktop floating-pet natural-language reminder"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pydantic>=2.5",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
desk-buddy = "desk_buddy.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
